rerender figures changing abundance-driven to individuals-driven

--- a/dissertation_version/appendix_s1.Rmd
+++ b/dissertation_version/appendix_s1.Rmd
@@ -100,7 +100,7 @@ slope_winning_fits <- winning_fits %>%
 biomass_slopes_long <- slope_winning_fits %>%
   select(matssname, ratio_sim, ratio_real) %>%
   tidyr::pivot_longer(-matssname, names_to = "source", values_to = "biomass_ratio") %>%
-  mutate(Dynamics = ifelse(source == "ratio_sim", "Abundance driven", "Observed"))
+  mutate(Dynamics = ifelse(source == "ratio_sim", "Individuals driven", "Observed"))
 
 ```
 
@@ -134,7 +134,7 @@ slope_winning_fits_energy <- winning_fits_energy %>%
 energy_slopes_long <- slope_winning_fits_energy %>%
   select(matssname, ratio_sim, ratio_real) %>%
   tidyr::pivot_longer(-matssname, names_to = "source", values_to = "energy_ratio") %>%
-  mutate(Dynamics = ifelse(source == "ratio_sim", "Abundance driven", "Observed"))
+  mutate(Dynamics = ifelse(source == "ratio_sim", "Individuals driven", "Observed"))
 
 
 # Combine energy and biomass results into one dataframe
@@ -164,9 +164,9 @@ slope_histograms <- multi_panel_figure(columns = 1, height = c(1.6, 2), unit = "
 slope_histograms
 ```
 
-**Appendix S1  Figure S1**. Histograms showing the direction and magnitude of long-term trends for the abundance-driven (null-model; left) and observed (right) changes in biomass (A) and energy use (B), for communities with a significant slope and/or interaction term (for biomass, 141/199 routes; for energy use, 137/199 routes; Table 1). Change is summarized as the ratio of the fitted value for the last year in the time series to the fitted value for the first year in the timeseries from the best-fitting model for that community. Values greater than 1 (vertical black line) indicate increases in total energy or biomass over time, and less than 1 indicate decreases. The abundance-driven dynamics (left) reflect the trends fit for the null model, while the observed dynamics (right) reflect trends incorporating both change in total abundance and change in the size structure over time. For communities best-described by syndromes of “coupled trends” or “no directional change”, the “abundance-driven” and “observed” ratios will be the same; for communities with “decoupled trends”, there will be different ratios for or “abundance-driven” and “observed” dynamics.
+**Appendix S1  Figure S1**. Histograms showing the direction and magnitude of long-term trends for the individuals-driven (null-model; left) and observed (right) changes in biomass (A) and energy use (B), for communities with a significant slope and/or interaction term (for biomass, 141/199 routes; for energy use, 137/199 routes; Table 1). Change is summarized as the ratio of the fitted value for the last year in the time series to the fitted value for the first year in the timeseries from the best-fitting model for that community. Values greater than 1 (vertical black line) indicate increases in total energy or biomass over time, and less than 1 indicate decreases. The individuals-driven dynamics (left) reflect the trends fit for the null model, while the observed dynamics (right) reflect trends incorporating both change in total abundance and change in the size structure over time. For communities best-described by syndromes of “coupled trends” or “no directional change”, the “individuals-driven” and “observed” ratios will be the same; for communities with “decoupled trends”, there will be different ratios for or “individuals-driven” and “observed” dynamics.
 
-Among routes with temporal trends (“coupled trends” or “decoupled trends”), there are qualitatively different continental-wide patterns in abundance-driven and observed dynamics for total biomass and total energy use. 76% of trends in abundance-driven (null model) dynamics for energy use are decreasing, and 72% for biomass (Table 2). For biomass, observed dynamics are balanced evenly between increases (50% of routes) and decreases (50%) - indicating that changes in the size structure produce qualitatively different long-term trends for biomass than would be expected given abundance changes alone. However, trends for energy use (which scales nonlinearly with biomass) are dominated by decreases (69% of routes), more closely mirroring the trends expected given changes in individual abundance alone.
+Among routes with temporal trends (“coupled trends” or “decoupled trends”), there are qualitatively different continental-wide patterns in individuals-driven and observed dynamics for total biomass and total energy use. 76% of trends in individuals-driven (null model) dynamics for energy use are decreasing, and 72% for biomass (Table 2). For biomass, observed dynamics are balanced evenly between increases (50% of routes) and decreases (50%) - indicating that changes in the size structure produce qualitatively different long-term trends for biomass than would be expected given abundance changes alone. However, trends for energy use (which scales nonlinearly with biomass) are dominated by decreases (69% of routes), more closely mirroring the trends expected given changes in individual abundance alone.
 
 
 \newpage
@@ -259,9 +259,9 @@ isd_change_plots
 ```
 
 
-**Appendix S1 Figure S2.** Histograms of (A) change in mean body size from the first to the last five years of monitoring, (B) overall change in the size structure, and (C) change in species composition for routes whose dynamics for  total biomass were best-described using no temporal trend (bottom row; intercept-only model), separate trends for observed and abundance-driven dynamics (middle row), or the same trend for observed and abundance-driven dynamics (top row). Change in mean body size (A) is calculated as the ratio of the mean body size of all individuals observed in the last 5 years of the timeseries relative to the mean body size of all individuals observed in the first 5 years. Overall change in the ISD (B) is calculated as the degree of turnover between the ISDs for the first and last five years of the timeseries (see text). Change in species composition (C) is Bray-Curtis dissimilarity comparing species composition in the first five years to the last five years. 
+**Appendix S1 Figure S2.** Histograms of (A) change in mean body size from the first to the last five years of monitoring, (B) overall change in the size structure, and (C) change in species composition for routes whose dynamics for  total biomass were best-described using no temporal trend (bottom row; intercept-only model), separate trends for observed and individuals-driven dynamics (middle row), or the same trend for observed and individuals-driven dynamics (top row). Change in mean body size (A) is calculated as the ratio of the mean body size of all individuals observed in the last 5 years of the timeseries relative to the mean body size of all individuals observed in the first 5 years. Overall change in the ISD (B) is calculated as the degree of turnover between the ISDs for the first and last five years of the timeseries (see text). Change in species composition (C) is Bray-Curtis dissimilarity comparing species composition in the first five years to the last five years. 
 
-<!-- Routes that exhibit decoupling between observed and abundance-driven changes in total biomass exhibit a high prevalence of increases and decreases in mean body size (middle row, panel A) compared to the changes seen in routes that show either no trend or non-decoupled trends. However, routes with all three signatures of dynamics (coupling, decoupling, or no trend) are not detectably different in the degree of overall change in the ISD or in species composition over time (panels B and C). -->
+<!-- Routes that exhibit decoupling between observed and individuals-driven changes in total biomass exhibit a high prevalence of increases and decreases in mean body size (middle row, panel A) compared to the changes seen in routes that show either no trend or non-decoupled trends. However, routes with all three signatures of dynamics (coupling, decoupling, or no trend) are not detectably different in the degree of overall change in the ISD or in species composition over time (panels B and C). -->
 
 \newpage
 
@@ -291,7 +291,7 @@ model_outcomes_table_pretty <- model_outcomes_table %>%
 model_outcomes_table_pretty
 
 ```
-**Appendix S1 Table S1**. Table of the number and proportion of routes whose dynamics for total biomass and total energy use are best described by the following syndromes: no directional change (intercept-only model, biomass ~ 1 or energy use ~ 1); a coupled trend (biomass ~  year or energy use ~ year); or a model with decoupled temporal trends for observed and abundance-driven dynamics (biomass ~ year *  dynamics or energy use ~ year * dynamics, where dynamics refers to observed or null model, abundance-driven dynamics).
+**Appendix S1 Table S1**. Table of the number and proportion of routes whose dynamics for total biomass and total energy use are best described by the following syndromes: no directional change (intercept-only model, biomass ~ 1 or energy use ~ 1); a coupled trend (biomass ~  year or energy use ~ year); or a model with decoupled temporal trends for observed and individuals-driven dynamics (biomass ~ year *  dynamics or energy use ~ year * dynamics, where dynamics refers to observed or null model, individuals-driven dynamics).
 
 \newpage
 
@@ -321,9 +321,9 @@ slope_winning_fits_pretty <- slope_winning_fits_summary %>%
          prop_observed_increase,
          n_with_slope) %>%
   rename(Currency = currency,
-         # `Number of routes with abundance-driven increase`= n_abundance_increase,
+         # `Number of routes with individuals-driven increase`= n_abundance_increase,
          # `Number of routes with observed increase`  = n_observed_increase,
-         `Proportion of increasing abundance-driven trends` = prop_abundance_increase,
+         `Proportion of increasing individuals-driven trends` = prop_abundance_increase,
          `Proportion of increasing observed trends` = prop_observed_increase,
          `Number of routes with temporal trends` = n_with_slope)
 
@@ -332,7 +332,7 @@ slope_winning_fits_pretty
 ```
 
 
-*Appendix S1 Table S2*. The proportion of trends that are increasing (specifically, for which the ratio of the last fitted value to the first fitted value > 1) for abundance-driven and observed dynamics, for routes exhibiting temporal trends (“coupled trends” or “decoupled trends”) in total biomass and total energy use. Trends that are not increasing are decreasing.
+*Appendix S1 Table S2*. The proportion of trends that are increasing (specifically, for which the ratio of the last fitted value to the first fitted value > 1) for individuals-driven and observed dynamics, for routes exhibiting temporal trends (“coupled trends” or “decoupled trends”) in total biomass and total energy use. Trends that are not increasing are decreasing.
 
 
 \newpage
